--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,5 @@
+
+
 body {
 	background: url(http://wallpapercave.com/wp/OU4qIgm.jpg);
 }
@@ -5,9 +7,9 @@ body {
 	text-align: center;
 	width:100%;
 	background:url(http://www.richardslawgroup.com/rlg/wp-content/uploads/2013/02/myspace_background1.jpg);
+	font-family: Eagle Lake;
+	font-weight: bold;
 	
-	
-
 }
 .icon {
 	width:50px;
@@ -17,8 +19,10 @@ body {
 	margin-bottom: 10px;
 
 }
+h3{
+	font-size: 30px
 
-
+}
 nav {
 	text-align: center;
 	font-size: 20px;
@@ -30,12 +34,16 @@ background: url(https://www.walldevil.com/wallpapers/a52/2903-textures-backgroun
 	height:100%;
 	width:100%;
 	background: url(http://www.richardslawgroup.com/rlg/wp-content/uploads/2013/02/myspace_background1.jpg);
-
+	font-family: Amatic SC;
+	font-size: 20px;
+	font-weight: bold;
 }
 
 #buttons {
 	text-align: center;
 	margin-bottom: 20px;
+	font-family: Amatic SC;
+	font-size: 20px;
 }
 	
 #Start {
